--- a/app/src/main/res/layout/filter_item.xml
+++ b/app/src/main/res/layout/filter_item.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutItemFilter"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/filter_white_btn"
+    android:padding="5dp">
 
     <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/filter_icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_centerInParent="true"
         android:src="@drawable/activity_icon" />
 
+
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/filter_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/filter_icon"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:text="TEST"
-        android:textColor="@color/black"
+        android:layout_marginTop="8dp"
+        android:text="Shop"
+        android:textColor="@color/grey03"
         android:textSize="12sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
